--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 body{
     display: flex;
     flex-direction: column;
@@ -17,30 +21,36 @@ form{
     border-radius: 25px;
     margin: 25px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+    padding: 15px;
 }
 form .model{
     padding: 15px;
+    margin-bottom: 10px;
     border-radius: 25px;
-    width: 100%;
+    width: 95%;
     height: auto;
-    justify-content: space-around;
     display: flex;
-    align-self: center;
+    justify-content: space-around;
     flex-wrap: wrap;
     gap: 15px 0px;
 }
 .field{
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
-    width: 250px;
-    font-size: larger;
+    width: 270px;
 }
 .field input{
     padding: 15px;
+    width: 150px;
     border-radius: 15px;
     border: 1px solid black;
     background-color: ghostwhite;
     font-size: medium;
+}
+label{
+    font-size: 16px;
 }
 
 .field input[readonly]{
@@ -61,9 +71,6 @@ input[type="button"]:hover{
 input[type="radio"]{
     width: 15px;
     height: 15px;
-}
-label{
-    font-size: 18px;
 }
 
 footer{
