--- a/style.css
+++ b/style.css
@@ -72,7 +72,41 @@ input[type="radio"]{
     width: 15px;
     height: 15px;
 }
-
+.icon-container {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+}
+.icon {
+    width: 16px;
+    height: 16px;
+    background-size: cover;
+    background-image: url("assets/img/information.png");
+}
+.tooltip {
+    visibility: hidden;
+    width: 150px;
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -60px; 
+    opacity: 0;
+    transition: opacity 0.3s;
+    font-size: 16px;
+}
+.icon-container:hover .tooltip {
+    visibility: visible;
+    opacity: 1;
+}
+math{
+    font-size: 22px;
+}
 footer{
     display: flex;
     align-items: center;
