--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root{
-    --primary-color: #ffffff;
-    --secondary-color: #2c2c2c;
-    --terciary-color: #707070;
+    --primary-color: #e9ecef;
+    --secondary-color: #212529;
+    --terciary-color: #6c757d;
 }
 *{
     margin: 0;
@@ -26,6 +26,7 @@ h2{
     flex-direction: column;
     align-items: center;
     background-color: var(--terciary-color);
+    color: var(--primary-color);
     border-radius: 25px;
     margin: 25px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
@@ -167,7 +168,16 @@ footer a{
     background-color: rgb(247, 189, 189) !important;
     color: rgb(59, 0, 0);
 }
-@media (max-width: 600px) {
+.grafico-section{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+}
+#grafico{
+    width: fit-content;
+    height: fit-content;
+}
+@media (max-width: 1200px) {
     .section{
         width: 80%;
     }
