feat(Adicionando suporte para remover linhas do grafico)

--- a/style.css
+++ b/style.css
@@ -182,6 +182,9 @@ footer a{
     justify-content: space-between;
     flex-direction: row;
 }
+.grafico_btn input{
+    font-size: 18px;
+}
 .list{
     background-color: var(--secondary-color);
     padding: 5px;
